2001-01-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* actors.cc, conversation.cc: fixed 'male avatar has female face' bug
	* lots-of-files: removed superfluous SDL.h includes, replaced some SDL.h includes by SDL_video.h/SDL_audio.h/etc... (cutting compile time with almost 20% on my system!)

2001-01-17  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: Fixed restart problem in Trinsic.
	* Ucc - C-comments and #include added.

2001-01-14  Jeff Freedman  <jeff@amy.nerble.net>

	* Bugs fixed:  Crash (out of memory) at end, guards, walking in
	sleep.
	
	* gamewin.cc (Game_window): "userusecode" entry in .exult.cfg
	allows for custom Usecode functions.
	* npcnear.cc: Faster response for SI's rabbit, and storms cleaned
	up a bit more.

2001-01-14  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc: added some (disabled) code to create a full 600Mb world map for U7

2001-01-13  Max Horn  <max@quendi.de>
	* bggame.cc: some minor changes to make more similiar to sigame.cc
	* sigame.cc: brought SI_Game::new_game up-to-date with its BG_Game counterpart
	  i.e. the name arrays now have correct size (where too small before) so you can now enter
	  names up to 15 chars, and you can now use left/right arrow to switch your portrait/sex
	* vgafile.cc: Vga_file destructor checks that shapes is allocated before destroying it
	* files/utils.cc: rewrote Switch_slashes algorithm to translate Unix->mac paths

2001-01-13  Jeff Freedman  <jeff@amy.nerble.net>

	* Found 1 memory corruption (my fault:-( ).
	* Fixed crash at start of monks' encounter.
	
2001-01-12  Tristan Tarrant <nadir@users.sourceforge.net>
	* NEWS: updated
	* gamma.h: added newline at the end to keep gcc happy

2001-01-11  Jeff Freedman  <jeff@amy.nerble.net>

	* Implemented 'shy' and 'hound' schedules.
	* Fixed 'hang' bug upon entering Monitor.

2001-01-12  Ryan Nunn <triforce@merlin.net.au>
	* Actors.* : When in SI Intercept dont_render item flag and change to
	  dont_move SI flag.