@@ -38,11 +38,28 @@ Boston, MA  02111-1307, USA.
 #	include "../gamma.h"
 #endif
 
+#include "SDL_video.h"
+
 using std::memmove;
 
 GammaTable<uint8> Image_window8::GammaRed(256);
 GammaTable<uint8> Image_window8::GammaBlue(256);
 GammaTable<uint8> Image_window8::GammaGreen(256);
+
+Image_window8::Image_window8(unsigned int w, unsigned int h, 
+				int scl = 1, bool fs)
+	: Image_window(new Image_buffer8(w, h, (Image_buffer *) 0), 
+	  scl, fs)
+{
+	colors = new SDL_Color[256];
+	ib8 = (Image_buffer8 *) ibuf;
+}
+
+Image_window8::~Image_window8()
+{
+	delete[] colors;
+}
+
 
 void Image_window8::get_gamma (float &r, float &g, float &b)
 {
